# BevProg

./: LICENSE  README.md
2022_09_09/: 01.py
2022_09_16/: 02.py  can_drink_alc.py  homework.py  konstansok.py  lista.py  terulet.py  text.py
2022_09_23/: angol.py  fibonacci.py  loops.py  tuple_dict.py  two_lists.py
2022_10_07/: calsses.py  list_comprihension.py
2022_10_14/: point.py
2022_10_21/: Dog.py
2022_10_28/: distance.py
2022_11_11/: copy.py  exception.py  exception_arato.py  read_some_file.py  something2
2022_11_18/: jsongatás.py  main.py  modules.py  more_people.json  simple.json  sysargs.py  webstuff.py
2022_11_25/: Stack.py  anagram.py  mysterious_message.py  page_to_print.py  skyscraper_height.py
2022_11_25/java_tasks/main/java/com/csabapro/Anagram/: Anagram.java
2022_11_25/java_tasks/main/java/com/csabapro/GuessingGame/: GuessingGame.java
Homework/2022_09_16/: NaCl.py  math_stuff.py  whats_your_age.py
Homework/2022_09_16/c_homework/: .gitignore  CMakeLists.txt  math_stuff.c  na_cl.c  whats_your_age.c
Homework/2022_09_16/rust_homework/: Cargo.toml
Homework/2022_09_23/: distance_of_two_point.py  fibonacci.py  palindrome.py  pyramids_and_cones.py
Homework/2022_10_02/: binary_converter.py  caesar_cypher.py  insert_word.py  valid.py
Homework/2022_10_07/: programmers.py
Homework/2022_11_18/: README.md  comments.py  communicate.py  communication  pi_poem.py
Homework/2022_11_18/rust_client/src/: main.rs
Homework/2022_11_25/: guessing_game.py  mysterious_message.py
suggestion/: sewing_machine.py
(+5 files in other folders)
